# MentalHealthCharity-backend

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 404451dfef02_create_models.py  68d2ee4205a1_migration.py  6f653857e0c0_migration.py  beef2e3d63e0_initial_migration.py  d1ff62c73e78_migration.py  d662bb89477b_migration.py  e56e5e7cfb3d_migration.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: article.py  chat.py  message.py  users.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_article.py  crud_chat.py  crud_message.py  crud_user.py
app/db/: init_db.py
app/helpers/: required_role_enum.py  user_enum.py
app/models/: __init__.py  article.py  chat.py  chat_participants.py  message.py  user.py
app/schemas/: __init__.py  article.py  chat.py  message.py  user.py
app/tests/api/api_v1/: test_users.py
